20000420-13:10 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/compiler/genobj32.c
     * Some little fixes after Ryszard changes

20000419-18:40 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *inlcude/hbcomp.h
    *source/compiler/genc.c
    *source/compiler/genhrb.c
    *source/compiler/genjava.c
    *source/compiler/genobj32.c
    *source/compiler/harbour.c
    *source/compiler/harbour.y
	* added code to handle new jump opcodes
	* fixed symbol table handling - there is no special handling
	needed for symbols' positions during output generation
	* the name of compiled file (the starting procedure) is not
	placed into the symbol table if '-n' switch is used
	* HB_P_ENDPROC is automatically generated after the function
	or procedure is parsed - there is no need to check it
	during output generation phase

NOTE:
 output generated by genobj32.c is not tested!
 output generated by genjava.c is not tested! (did it worked ?)

20000419-16:00 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/compiler/genobj32.c
     * Implemented code optimizations proposed by Victor.

20000419-12:13 GMT+1 Antonio Linares <alinares@fivetech.com>
   * source/compiler/genobj32.c
     * Progressive fixes to support genc.c latest changes.
     (just missing latest Ron genc.c fixes!)

20000419-11:36 GMT+1 Victor Szakats <info@szelvesz.hu>
   * tests/test.prg
     ! Restored the file changed without any ChangeLog info, and also
       breaking the build process for GNU-make.

20000419-10:37 GMT+1 Victor Szakats <info@szelvesz.hu>

   * ChangeLog
     ! Some typos for my last ChangeLog

20000418-22:05 DST Paul Tucker <ptucker@sympatico.ca>
   * source/compiler/harbour.c
     * added casts.

20000418-18:35 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/harbour.c
     * Modified hb_compCodeBlockEnd() to call hb_compOptimizeJumps() and release pNOOPs and pJumps pointers.

20000419-00:28 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/gtcrs/gtcrs.c